Создано с помощью Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPMM4KBXdX3+ncO4x1q4h9V",
+      "authorship_tag": "ABX9TyPNNchO2KULm3qh7CaxX9CJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 46,
       "metadata": {
         "id": "jt-WpeiCVkzN"
       },
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "3iq1mS-7Y4p5"
       },
-      "execution_count": 25,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -88,31 +88,14 @@
         "y_train = torch.from_numpy(y_train.astype(np.float32))\n",
         "y_test = torch.from_numpy(y_test.astype(np.float32))\n",
         "\n",
-        "y_train = y_train.viev(y_train.shape [0], 1)\n",
-        "y_test = y_test.viev(y_test.shape [0], 1)"
+        "y_train = y_train.view(y_train.shape [0], 1)\n",
+        "y_test = y_test.view(y_test.shape [0], 1)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 237
-        },
-        "id": "WuoLOQAzZ1J6",
-        "outputId": "585b03d8-737f-4c47-f3f0-a9eb38688c3d"
+        "id": "WuoLOQAzZ1J6"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-26-dbe2701823dc>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviev\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviev\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'viev'"
-          ]
-        }
-      ]
+      "execution_count": 48,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -136,7 +119,7 @@
       "cell_type": "code",
       "source": [
         "class LogisticResgression(nn.Module):\n",
-        "  def__init__(self, n_input_features):\n",
+        "  def __init__(self, n_input_features):\n",
         "    super(LogisticResgression, self).__init__()\n",
         "    self.linear = nn.Linear(n_input_features, 1)\n",
         "\n",
@@ -149,7 +132,7 @@
       "metadata": {
         "id": "7DtmFjopeU6Y"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -171,7 +154,7 @@
       "metadata": {
         "id": "Gxn9Cu5FhBgw"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -201,14 +184,62 @@
         "  # zero gradients\n",
         "  optimizer.zero_grad()\n",
         "\n",
-        "  if (epoch+1) % 10 == o:\n",
+        "  if (epoch+1) % 10 == 0:\n",
         "    print(f'epoch: {epoch+1}, loss = {loss.item():.4f}')\n"
       ],
       "metadata": {
-        "id": "K1Mj4Cnphql4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K1Mj4Cnphql4",
+        "outputId": "5eb47000-5b88-45a7-f6ad-d312bd60318f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "epoch: 10, loss = 0.5436\n",
+            "epoch: 20, loss = 0.4535\n",
+            "epoch: 30, loss = 0.3954\n",
+            "epoch: 40, loss = 0.3546\n",
+            "epoch: 50, loss = 0.3242\n",
+            "epoch: 60, loss = 0.3004\n",
+            "epoch: 70, loss = 0.2813\n",
+            "epoch: 80, loss = 0.2654\n",
+            "epoch: 90, loss = 0.2520\n",
+            "epoch: 100, loss = 0.2405\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad ():\n",
+        "  y_predicted = model (X_test)\n",
+        "  y_predicted_cls = y_predicted.round ()\n",
+        "  acc = y_predicted_cls.eq (y_test).sum () / float (y_test.shape [0])\n",
+        "  print (f'accuracy = {acc:4f}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0-pmk9Lp078s",
+        "outputId": "8f34f641-0091-46d0-f678-03cdad4aec2f"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy = 0.885965\n"
+          ]
+        }
+      ]
     }
   ]
 }
